# eo-torch

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
eotorch/: __init__.py  dataloaders.py  datasets.py  own_dataset.py  samplers.py  tasks.py  utils.py
examples/: test_binary.py  test_multi.py  test_transformers.py
examples/configs/: conf.py
