[tool.poetry]
name = "eo-torch"
version = "0.1.1"
description = ""
authors = ["Johannes Hecher <31933940+hanshannus@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "eotorch"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
torch = "^1.13.1"
geopandas = "^0.12.2"
numpy = "^1.24.1"
rasterio = "^1.3.4"
rtree = "^1.0.1"
torchvision = "^0.14.1"
torchmetrics = "^0.11.0"
pytorch-lightning = "^1.9.0"
scipy = "^1.10.0"


[tool.poetry.group.dev.dependencies]
segmentation-models-pytorch = "^0.3.2"
transformers = "^4.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
