[tool.poetry]
name = "eotorch"
version = "0.1.0"
description = ""
authors = ["Johannes Hecher"]
readme = "README.md"
packages = [
    {include = "eotorch"}
]


[tool.poetry.dependencies]
python = ">=3.9,<3.12"
torch = "^1.13.0"
torchvision = "^0.14.1"
torchmetrics = "^0.11.0"
pytorch-lightning = "^1.9.0"
segmentation-models-pytorch = "^0.3.2"
geopandas = "^0.12.2"
numpy = "^1.24.2"
rasterio = "^1.3.4"
rtree = "^1.0.1"
scipy = "^1.10.0"
yamx = { git="https://github.com/hanshannus/pyyaml-tag-extensions.git", branch = "main" }

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = "^23.1.0"
flake8 = "^6.0.0"
pre-commit = "^3.1.1"
transformers = "^4.26.1"
#mmcv = { url="https://download.openmmlab.com/mmcv/dist/cpu/torch1.13.0/mmcv-2.0.0rc3-cp39-cp39-macosx_11_0_arm64.whl" }
#mmsegmentation = "^1.0.0rc0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
