[tool.poetry]
name = "eotorch"
version = "0.1.2"
authors = ["Johannes Hecher"]
readme = "README.md"
description = "Machine learning training classes for raster image segmentation"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
torch = "^1.13.0"
torchvision = "^0.14.1"
torchmetrics = "^0.11.0"
pytorch-lightning = "^1.9.0"
geopandas = "^0.12.2"
numpy = "^1.24.2"
rasterio = "^1.3.4"
rtree = "^1.0.1"
scipy = "^1.10.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = "^23.1.0"
flake8 = "^6.0.0"
pre-commit = "^3.1.1"
segmentation-models-pytorch = "^0.3.2"
transformers = "^4.26.1"
#mmcv = { url="https://download.openmmlab.com/mmcv/dist/cpu/torch1.13.0/mmcv-2.0.0rc3-cp39-cp39-macosx_11_0_arm64.whl" }
#mmsegmentation = "^1.0.0rc0"

[build-system]
requires = ["setuptools", "poetry-core"]
build-backend = "poetry.core.masonry.api"
